minor: Load thumbnails in an additional query for all records at once; fix: Text area shows vertical scrollbar

--- a/src/Ui/Forms/resources/css/styles.scss
+++ b/src/Ui/Forms/resources/css/styles.scss
@@ -124,7 +124,7 @@
     resize: none;
     font-size: 16px;
     font-family: inherit;
-    overflow: hidden;
+    overflow: hidden !important;
   }
 
   &.-checkbox {
